# d100-400-project

./: .gitignore  README.md  environment.yml  pyproject.toml
analysis/: eda_cleaning.ipynb  model_evaluation.ipynb  model_training.py
data/: data_releases.csv
final_project/data/: __init__.py  load_data.py  train_test_split.py
final_project/evaluation/: __init__.py  evaluation.py
final_project/feature_engineering/: __init__.py  scaler.py
final_project/modeling/: __init__.py  constants.py  lasso.py  pipelines.py  save_load_models.py
final_project/plotting/: __init__.py  eda_plots.py  eval_plots.py  training_plots.py
final_project/preprocessing/: __init__.py  prepare_data.py  preprocessing.py
report/: report.ipynb
src/data/: query_data.py
tests/feature_engineering/: test_scaler.py
