[project]
name = "final_project"
version = "0.1"
requires-python = ">=3.10"
authors = [
  {name = "Gil Dexter"},
]
description = "Predicting Bitcoin volatility!"
readme = "README.md"
keywords = ["bitcoin", "data analysis", "data science", "finance"]
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
download-data = "final_project.data.load_data:main"

[tool.setuptools]
packages = ["final_project"]
